talos-cluster/flux/apps/tektonic-ci/eventlistener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tektonic-eventlistener
    namespace: tektonic-ci
    annotations:
        tailscale.com/funnel: "true"
spec:
    ingressClassName: tailscale
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: el-tektonic-github-listener
                            port:
                                number: 8080
    tls:
        - hosts:
              - tektonic-eventlistener
